Update intelligent commenter: 1 comment every 5 minutes
- Change maxCommentsPerRun from 5 to 1
- Update cron schedule from hourly to every 5 minutes (*/5 * * * *)
- More frequent but controlled commenting for better engagement

--- a/.github/workflows/intelligent-commenter.yml
+++ b/.github/workflows/intelligent-commenter.yml
@@ -2,8 +2,8 @@ name: Intelligent Reddit Commenter
 
 on:
   schedule:
-    # Run every hour at :40 minutes  
-    - cron: '40 * * * *'
+    # Run every 5 minutes
+    - cron: '*/5 * * * *'
   workflow_dispatch: # Allow manual trigger
 
 jobs:
