--- a/.github/workflows/intelligent-commenter.yml
+++ b/.github/workflows/intelligent-commenter.yml
@@ -1,9 +1,9 @@
 name: Intelligent Reddit Commenter
 
 on:
-  schedule:
-    # Run every 5 minutes
-    - cron: '*/5 * * * *'
+  # schedule:
+  #   # Run every 5 minutes (DISABLED)
+  #   - cron: '*/5 * * * *'
   workflow_dispatch: # Allow manual trigger
 
 jobs:
